syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "ms-order/pb";

message Cart {
  string id = 1;
  int64 user_id = 2;
  int64 product_id = 3;
  double quantity = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CartCreateRequest { Cart cart = 1; }
message CartCreateResponse {
  Cart cart = 1;
  string message = 2;
}

message CartGetByIDRequest {
  string id = 1;
  int64 user_id = 2;
}
message CartGetByIDResponse { Cart cart = 1; }

message CartGetAllRequest { int64 user_id = 1; }
message CartGetAllResponse { repeated Cart carts = 1; }

message CartUpdateRequest {
  string id = 1;
  int64 user_id = 2;
  double quantity = 4;
}
message CartUpdateResponse {
  Cart cart = 1;
  string message = 2;
}

message CartDeleteOneRequest {
  string id = 1;
  int64 user_id = 2;
}
message CartDeleteOneResponse {
  Cart cart = 1;
  string message = 2;
}

message CartDeleteAllRequest { int64 user_id = 1; }
message CartDeleteAllResponse {
  repeated string ids = 1;
  string message = 2;
}

service CartService {
  rpc CartCreate(CartCreateRequest) returns (CartCreateResponse) {}
  rpc CartGetByID(CartGetByIDRequest) returns (CartGetByIDResponse) {}
  rpc CartGetAll(CartGetAllRequest) returns (CartGetAllResponse) {}
  rpc CartUpdate(CartUpdateRequest) returns (CartUpdateResponse) {}
  rpc CartDeleteOne(CartDeleteOneRequest) returns (CartDeleteOneResponse) {}
  rpc CartDeleteAll(CartDeleteAllRequest) returns (CartDeleteAllResponse) {}
}
